Fix header alignment on noheader template

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -35,7 +35,13 @@ body.noheader {
 	}
 
 	.page-content {
-		margin-top: 60px;
+		margin-top: 68px;
+	}
+}
+
+body.home.noheader {
+	.page-content {
+		margin-top: 0;
 	}
 }
 
